<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_margin"
    tools:context=".ui.main.MainActivity">


    <TextView
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:labelFor="@+id/txtBill"
        android:text="@string/bill"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.967"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="369dp"
        android:layout_height="56dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/lblBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill" />

    <TextView
        android:id="@+id/lblEuroBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBill"
        app:layout_constraintStart_toEndOf="@+id/txtBill"
        app:layout_constraintTop_toTopOf="@+id/txtBill" />

    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:labelFor="@+id/txtTip"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@+id/lblBill"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <EditText
        android:id="@+id/txtTip"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="233dp"
        android:layout_height="58dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/txtBill"
        app:layout_constraintTop_toBottomOf="@+id/lblTip" />

    <TextView
        android:id="@+id/lblEuroTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTip"
        app:layout_constraintStart_toEndOf="@+id/txtTip"
        app:layout_constraintTop_toTopOf="@+id/txtTip" />

    <TextView
        android:id="@+id/lblPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:labelFor="@+id/txtPercentage"
        android:text="@string/tip2"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toStartOf="@+id/lblTip"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="@+id/txtBill"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <EditText
        android:id="@+id/txtPercentage"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="110dp"
        android:layout_height="54dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:gravity="end"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toBottomOf="@+id/txtTip"
        app:layout_constraintEnd_toEndOf="@+id/lblPercentage"
        app:layout_constraintStart_toStartOf="@+id/txtBill"
        app:layout_constraintTop_toTopOf="@+id/txtTip" />

    <TextView
        android:id="@+id/txtPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:text="@string/percent"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPercentage"
        app:layout_constraintStart_toEndOf="@+id/txtPercentage"
        app:layout_constraintTop_toTopOf="@+id/txtPercentage" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/txtTotal"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@+id/lblTip"
        app:layout_constraintTop_toBottomOf="@+id/txtTip" />

    <EditText
        android:id="@+id/txtTotal"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="375dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/txtTip"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal" />

    <TextView
        android:id="@+id/lblEuroTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
        app:layout_constraintStart_toEndOf="@+id/txtTotal"
        app:layout_constraintTop_toTopOf="@+id/txtTotal" />

    <Button
        android:id="@+id/btnResetTip"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:focusable="false"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/lblTip"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />


    <TextView
        android:id="@+id/lblPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:labelFor="@+id/txtPerDiner"
        android:text="@string/perDiner"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@+id/lblTip"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip" />


    <EditText
        android:id="@+id/txtPerDiner"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/lblPerDiner"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDiner" />

    <TextView
        android:id="@+id/txtEuroPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginStart="28dp"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPerDiner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtPerDiner"
        app:layout_constraintTop_toTopOf="@+id/txtPerDiner"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:labelFor="@+id/txtDiners"
        android:text="@string/diners"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintBottom_toTopOf="@+id/txtPerDiner"
        app:layout_constraintEnd_toEndOf="@+id/lblPercentage"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtDiners"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="110dp"
        android:layout_height="49dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:gravity="end"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/txtPerDiner"
        app:layout_constraintEnd_toEndOf="@+id/lblDiners"
        app:layout_constraintTop_toBottomOf="@+id/lblDiners" />

    <TextView
        android:id="@+id/lblPerDinerRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:labelFor="@+id/txtPerDinerRounded"
        android:text="@string/rounded"
        android:textAppearance="?android:attr/textAppearanceSmall"
        app:layout_constraintEnd_toEndOf="@+id/lblPerDiner"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDiner" />

    <EditText
        android:id="@+id/txtPerDinerRounded"
        style="@style/Base.TextAppearance.AppCompat.Headline"
        android:layout_width="373dp"
        android:layout_height="49dp"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginTop="4dp"
        android:clickable="false"
        android:focusable="false"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@+id/lblPerDinerRounded"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/txtBill"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDinerRounded" />

    <TextView
        android:id="@+id/txtEuroPerDinerRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:layout_marginStart="28dp"
        android:text="@string/euro"
        android:textColor="@color/black"
        android:textSize="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPerDinerRounded"
        app:layout_constraintStart_toEndOf="@+id/txtPerDinerRounded"
        app:layout_constraintTop_toTopOf="@+id/txtPerDinerRounded"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnResetDiners"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_inter_margin"
        android:focusable="false"
        android:text="@string/reset"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="@+id/lblPerDinerRounded"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDinerRounded" />

</androidx.constraintlayout.widget.ConstraintLayout>
